--- a/experiments/fashion_3v0.yml
+++ b/experiments/fashion_3v0.yml
@@ -1,14 +1,14 @@
-project: "stg-final"
+project: "gasten_20230413"
 name: "fashion-3v0"
-out-dir: "/media/TOSHIBA6T/LCUNHA/out"
-data-dir: "/home/lcunha/data"
-test-noise: "/home/lcunha/data/z/z_2000_64"
+out-dir: "/media/SEAGATE6T/IGOMES/out"
+data-dir: "/media/SEAGATE6T/IGOMES/data"
+test-noise: "/media/SEAGATE6T/IGOMES/data/z/z_2000_64"
 fixed-noise: 200
 
 device: cuda:0
 num-workers: 6
 
-fid-stats-path: "/home/lcunha/data/fid-stats/stats.inception.fashion-mnist.3v0.npz"
+fid-stats-path: "/media/SEAGATE6T/IGOMES/data/fid-stats/stats.inception.fashion-mnist.3v0.npz"
 
 num-runs: 3
 
@@ -53,9 +53,9 @@ train:
     batch-size: 64
     disc-iters: 1
     classifier:
-      - "/media/TOSHIBA6T/LCUNHA/classifiers/fashion-mnist.3v0/cnn-4-3.13752"
-      - "/media/TOSHIBA6T/LCUNHA/classifiers/fashion-mnist.3v0/cnn-8-3.99878"
-      - "/media/TOSHIBA6T/LCUNHA/classifiers/fashion-mnist.3v0/cnn-16-3.55156"
+      - "/media/SEAGATE6T/IGOMES/models/fashion-mnist.3v0/cnn-4-3.13752"
+      - "/media/SEAGATE6T/IGOMES/models/fashion-mnist.3v0/cnn-8-3.99878"
+      - "/media/SEAGATE6T/IGOMES/models/fashion-mnist.3v0/cnn-16-3.55156"
     weight:
       - 0
       - mgda
