--- a/experiments/mnist_5v3.yml
+++ b/experiments/mnist_5v3.yml
@@ -1,14 +1,14 @@
-project: "stg-final"
+project: "gasten_20230413"
 name: "mnist-5v3"
-out-dir: "/media/TOSHIBA6T/LCUNHA/out"
-data-dir: "/home/lcunha/data"
-test-noise: "/home/lcunha/data/z/z_2000_64"
+out-dir: "/media/SEAGATE6T/IGOMES/out"
+data-dir: "/media/SEAGATE6T/IGOMES/data"
+test-noise: "/media/SEAGATE6T/IGOMES/data/z/z_2000_64"
 fixed-noise: 200
 
-device: cuda:0
+device: cuda:1
 num-workers: 6
 
-fid-stats-path: "/home/lcunha/data/fid-stats/stats.inception.mnist.5v3.npz"
+fid-stats-path: "/media/SEAGATE6T/IGOMES/data/fid-stats/stats.inception.mnist.5v3.npz"
 
 num-runs: 3
 
@@ -53,9 +53,9 @@ train:
     batch-size: 64
     disc-iters: 1
     classifier:
-      - "/media/TOSHIBA6T/LCUNHA/classifiers/mnist.5v3/cnn-1-1.72404"
-      - "/media/TOSHIBA6T/LCUNHA/classifiers/mnist.5v3/cnn-2-1.86706"
-      - "/media/TOSHIBA6T/LCUNHA/classifiers/mnist.5v3/cnn-4-1.92101"
+      - "/media/SEAGATE6T/IGOMES/models/mnist.5v3/cnn-1-1.72404"
+      - "/media/SEAGATE6T/IGOMES/models/mnist.5v3/cnn-2-1.86706"
+      - "/media/SEAGATE6T/IGOMES/models/mnist.5v3/cnn-4-1.92101"
     weight:
       - 0
       - mgda
