--- a/experiments/mnist_7v1.yml
+++ b/experiments/mnist_7v1.yml
@@ -1,19 +1,19 @@
-project: "stg-final"
-name: "mnist-7v1"
-out-dir: "/media/TOSHIBA6T/LCUNHA/out"
-data-dir: "/home/lcunha/data"
-test-noise: "/home/lcunha/data/z/z_2000_64"
-fixed-noise: 200
+project: gasten_20230413
+name: mnist-7v1
+out-dir: ${FILESDIR}/out
+data-dir: ${FILESDIR}/data
+test-noise: ${FILESDIR}/data/z/z_2000_64
+fixed-noise: 2000
 
-device: cuda:0
+device: cuda:1
 num-workers: 6
 
-fid-stats-path: "/home/lcunha/data/fid-stats/stats.inception.mnist.7v1.npz"
+fid-stats-path: ${FILESDIR}/data/fid-stats/stats.inception.mnist.7v1.npz
 
 num-runs: 3
 
 dataset:
-  name: "mnist"
+  name: mnist
   binary:
     pos: 7
     neg: 1
@@ -21,13 +21,13 @@ dataset:
 model:
   z_dim: 64
   architecture:
-    name: "dcgan"
+    name: dcgan
     g_filter_dim: 64
     d_filter_dim: 64
     g_num_blocks: 3
     d_num_blocks: 3
   loss:
-    name: "ns"
+    name: ns
 
 
 optimizer:
@@ -53,9 +53,9 @@ train:
     batch-size: 64
     disc-iters: 1
     classifier:
-      - "/media/TOSHIBA6T/LCUNHA/classifiers/mnist.7v1/cnn-1-1.25442"
-      - "/media/TOSHIBA6T/LCUNHA/classifiers/mnist.7v1/cnn-2-1.7501"
-      - "/media/TOSHIBA6T/LCUNHA/classifiers/mnist.7v1/cnn-4-1.21139"
+      - ${FILESDIR}/models/mnist.7v1/cnn-1-1.25442
+      - ${FILESDIR}/models/mnist.7v1/cnn-2-1.7501
+      - ${FILESDIR}/models/mnist.7v1/cnn-4-1.21139
     weight:
       - 0
       - mgda
