--- a/experiments/fashion_3v0.yml
+++ b/experiments/fashion_3v0.yml
@@ -1,19 +1,19 @@
-project: "gasten_20230413"
-name: "fashion-3v0"
-out-dir: "/media/SEAGATE6T/IGOMES/out"
-data-dir: "/media/SEAGATE6T/IGOMES/data"
-test-noise: "/media/SEAGATE6T/IGOMES/data/z/z_2000_64"
+project: gasten_20230413
+name: fashion-3v0
+out-dir: out
+data-dir: data
+test-noise: data/z/z_2000_64
 fixed-noise: 200
 
 device: cuda:0
 num-workers: 6
 
-fid-stats-path: "/media/SEAGATE6T/IGOMES/data/fid-stats/stats.inception.fashion-mnist.3v0.npz"
+fid-stats-path: data/fid-stats/stats.inception.fashion-mnist.3v0.npz
 
 num-runs: 3
 
 dataset:
-  name: "fashion-mnist"
+  name: fashion-mnist
   binary:
     pos: 3
     neg: 0
@@ -21,13 +21,13 @@ dataset:
 model:
   z_dim: 64
   architecture:
-    name: "dcgan"
+    name: dcgan
     g_filter_dim: 64
     d_filter_dim: 64
     g_num_blocks: 3
     d_num_blocks: 3
   loss:
-    name: "ns"
+    name: ns
 
 
 optimizer:
@@ -53,9 +53,9 @@ train:
     batch-size: 64
     disc-iters: 1
     classifier:
-      - "/media/SEAGATE6T/IGOMES/models/fashion-mnist.3v0/cnn-4-3.13752"
-      - "/media/SEAGATE6T/IGOMES/models/fashion-mnist.3v0/cnn-8-3.99878"
-      - "/media/SEAGATE6T/IGOMES/models/fashion-mnist.3v0/cnn-16-3.55156"
+      - models/fashion-mnist.3v0/cnn-4-3.13752
+      - models/fashion-mnist.3v0/cnn-8-3.99878
+      - models/fashion-mnist.3v0/cnn-16-3.55156
     weight:
       - 0
       - mgda
@@ -65,10 +65,3 @@ train:
       - 20
       - 25
       - 30
-
-
-
-
-
-
-
