--- a/experiments/mnist_5v3.yml
+++ b/experiments/mnist_5v3.yml
@@ -1,19 +1,19 @@
-project: "gasten_20230413"
-name: "mnist-5v3"
-out-dir: "/media/SEAGATE6T/IGOMES/out"
-data-dir: "/media/SEAGATE6T/IGOMES/data"
-test-noise: "/media/SEAGATE6T/IGOMES/data/z/z_2000_64"
+project: gasten_20230413
+name: mnist-5v3
+out-dir: out
+data-dir: data
+test-noise: data/z/z_2000_64
 fixed-noise: 200
 
 device: cuda:0
 num-workers: 6
 
-fid-stats-path: "/media/SEAGATE6T/IGOMES/data/fid-stats/stats.inception.mnist.5v3.npz"
+fid-stats-path: data/fid-stats/stats.inception.mnist.5v3.npz
 
 num-runs: 3
 
 dataset:
-  name: "mnist"
+  name: mnist
   binary:
     pos: 5
     neg: 3
@@ -21,13 +21,13 @@ dataset:
 model:
   z_dim: 64
   architecture:
-    name: "dcgan"
+    name: dcgan
     g_filter_dim: 64
     d_filter_dim: 64
     g_num_blocks: 3
     d_num_blocks: 3
   loss:
-    name: "ns"
+    name: ns
 
 
 optimizer:
@@ -53,9 +53,9 @@ train:
     batch-size: 64
     disc-iters: 1
     classifier:
-      - "/media/SEAGATE6T/IGOMES/models/mnist.5v3/cnn-1-1.72404"
-      - "/media/SEAGATE6T/IGOMES/models/mnist.5v3/cnn-2-1.86706"
-      - "/media/SEAGATE6T/IGOMES/models/mnist.5v3/cnn-4-1.92101"
+      - models/mnist.5v3/cnn-1-1.72404
+      - models/mnist.5v3/cnn-2-1.86706
+      - models/mnist.5v3/cnn-4-1.92101
     weight:
       - 0
       - mgda
