--- a/experiments/mnist_7v1.yml
+++ b/experiments/mnist_7v1.yml
@@ -1,14 +1,14 @@
 project: gasten_20230413
 name: mnist-7v1
-out-dir: ${FILESDIR}/out
-data-dir: ${FILESDIR}/data
-test-noise: ${FILESDIR}/data/z/z_2000_64
+out-dir: out
+data-dir: data
+test-noise: data/z/z_2000_64
 fixed-noise: 2000
 
 device: cuda:0
 num-workers: 6
 
-fid-stats-path: ${FILESDIR}/data/fid-stats/stats.inception.mnist.7v1.npz
+fid-stats-path: data/fid-stats/stats.inception.mnist.7v1.npz
 
 num-runs: 3
 
@@ -53,9 +53,9 @@ train:
     batch-size: 64
     disc-iters: 1
     classifier:
-      - ${FILESDIR}/models/mnist.7v1/cnn-1-1.22602
-      - ${FILESDIR}/models/mnist.7v1/cnn-2-1.88299
-      - ${FILESDIR}/models/mnist.7v1/cnn-4-1.44629
+      - models/mnist.7v1/cnn-1-1.22602
+      - models/mnist.7v1/cnn-2-1.88299
+      - models/mnist.7v1/cnn-4-1.44629
     weight:
       - 0
       - mgda
