--- a/experiments/mnist_9v4.yml
+++ b/experiments/mnist_9v4.yml
@@ -1,19 +1,19 @@
-project: "gasten_20230423"
-name: "mnist-9v4"
-out-dir: "/media/SEAGATE6T/IGOMES/out"
-data-dir: "/media/SEAGATE6T/IGOMES/data"
-test-noise: "/media/SEAGATE6T/IGOMES/data/z/z_2000_64"
+project: gasten_20230423
+name: mnist-9v4
+out-dir: out
+data-dir: data
+test-noise: data/z/z_2000_64
 fixed-noise: 200
 
 device: cuda:0
 num-workers: 6
 
-fid-stats-path: "/media/SEAGATE6T/IGOMES/data/fid-stats/stats.inception.mnist.9v4.npz"
+fid-stats-path: data/fid-stats/stats.inception.mnist.9v4.npz
 
 num-runs: 3
 
 dataset:
-  name: "mnist"
+  name: mnist
   binary:
     pos: 9
     neg: 4
@@ -21,13 +21,13 @@ dataset:
 model:
   z_dim: 64
   architecture:
-    name: "dcgan"
+    name: dcgan
     g_filter_dim: 64
     d_filter_dim: 64
     g_num_blocks: 3
     d_num_blocks: 3
   loss:
-    name: "ns"
+    name: ns
 
 
 optimizer:
