--- a/experiments/mnist_7v1_1iter.yml
+++ b/experiments/mnist_7v1_1iter.yml
@@ -1,4 +1,4 @@
-project: gasten_20230706
+project: gasten_20230710
 name: mnist-7v1
 out-dir: out
 data-dir: data
@@ -37,14 +37,18 @@ optimizer:
 train:
   step-1:
     epochs: 10
-    checkpoint-every: 1
+    checkpoint-every: 5
     disc-iters: 1
     batch-size: 64
 
   step-2:
     epochs: 40
     checkpoint-every: 10
+    step-1-epochs:
+    - 10
     batch-size: 64
     disc-iters: 1
-    classifier: models/mnist.7v1/cnn-1-1.22602
-    weight: 25
+    classifier: 
+    - models/mnist.7v1/cnn-2-1.88299
+    weight: 
+    - 25
