solved issue with background

--- a/experiments/mnist_7v1_1iter.yml
+++ b/experiments/mnist_7v1_1iter.yml
@@ -51,5 +51,6 @@ train:
     classifier: 
     - models/mnist.7v1/cnn-2-1.88299
     - models/mnist.7v1/cnn-4-5.68766
+    - models/mnist.7v1/cnn-32-15.11799
     weight: 
     - 25
