--- a/experiments/mnist_7v1_1iter.yml
+++ b/experiments/mnist_7v1_1iter.yml
@@ -3,10 +3,12 @@ name: mnist-7v1
 out-dir: out
 data-dir: data
 test-noise: data/z/z_2000_64
-fixed-noise: 20000
+fixed-noise: 2000
 
-device: cuda:1
-num-workers: 6
+device: cuda:0
+num-workers: 2
+
+num-runs: 1
 
 fid-stats-path: data/fid-stats/stats.inception.mnist.7v1.npz
 
@@ -49,8 +51,6 @@ train:
     batch-size: 64
     disc-iters: 1
     classifier: 
-    - models/mnist.7v1/cnn-2-1.88299
-    - models/mnist.7v1/cnn-4-5.68766
-    - models/mnist.7v1/cnn-32-15.11799
+    - models/mnist.7v1/cnn-2-1.37197
     weight: 
     - 25
