--- a/experiments/patterns/fashion_3v0.yml
+++ b/experiments/patterns/fashion_3v0.yml
@@ -1,5 +1,5 @@
 project: gasten_20231211
-name: mnist-8v0
+name: fashion-3v0
 out-dir: out
 data-dir: data
 test-noise: data/z/z_2048_64
@@ -10,12 +10,12 @@ num-workers: 2
 
 num-runs: 1
 
-fid-stats-path: data/fid-stats/stats.inception.mnist.8v0.npz
+fid-stats-path: data/fid-stats/stats.inception.fashion-mnist.3v0.npz
 
 dataset:
-  name: mnist
+  name: fashion-mnist
   binary:
-    pos: 8
+    pos: 3
     neg: 0
 
 model:
@@ -50,6 +50,6 @@ train:
     batch-size: 64
     disc-iters: 1
     classifier:
-      - models/mnist.8v0/cnn-2-1.65905
+      - models/fashion-mnist.3v0/cnn-8-3.67780
     weight:
       - 25
