--- a/experiments/patterns/mnist_7v1.yml
+++ b/experiments/patterns/mnist_7v1.yml
@@ -5,8 +5,10 @@ data-dir: data
 test-noise: data/z/z_20000_64
 fixed-noise: 20000
 
-device: cuda:1
-num-workers: 6
+device: cuda:0
+num-workers: 2
+
+num-runs: 1
 
 fid-stats-path: data/fid-stats/stats.inception.mnist.7v1.npz
 
@@ -47,6 +49,6 @@ train:
     batch-size: 64
     disc-iters: 1
     classifier: 
-    - models/mnist.7v1/cnn-2-1.73750
+    - models/mnist.7v1/cnn-2-1.37197
     weight: 
     - 25
