--- a/experiments/small/mnist_5v3.yml
+++ b/experiments/small/mnist_5v3.yml
@@ -1,22 +1,22 @@
 project: gasten_20231211
-name: fashion-3v0
+name: mnist-5v3
 out-dir: out
 data-dir: data
-test-noise: data/z/z_20000_64
-fixed-noise: 20000
+test-noise: data/z/z_2048_64
+fixed-noise: 2048
 
 device: cuda:0
 num-workers: 2
 
 num-runs: 1
 
-fid-stats-path: data/fid-stats/stats.inception.fashion-mnist.3v0.npz
+fid-stats-path: data/fid-stats/stats.inception.mnist.5v3.npz
 
 dataset:
-  name: fashion-mnist
+  name: mnist
   binary:
-    pos: 3
-    neg: 0
+    pos: 5
+    neg: 3
 
 model:
   z_dim: 64
@@ -37,19 +37,23 @@ optimizer:
 
 train:
   step-1:
-    epochs: 10
+    epochs: 5
     checkpoint-every: 1
     disc-iters: 1
     batch-size: 64
 
   step-2:
-    epochs: 40
-    checkpoint-every: 10
+    epochs: 20
+    checkpoint-every: 5
     step-1-epochs:
-      - 10
+      - 0
+      - 2
+      - 5
     batch-size: 64
     disc-iters: 1
-    classifier:
-      - models/fashion-mnist.3v0/cnn-8-3.67780
-    weight:
-      - 25
+    classifier: 
+    - models/mnist.5v3/cnn-1-1.27787
+    - models/mnist.5v3/cnn-2-1.2088
+    - models/mnist.5v3/cnn-4-1.45747
+    weight: 
+    - 25
