--- a/experiments/small/fashion_3v0.yml
+++ b/experiments/small/fashion_3v0.yml
@@ -2,8 +2,8 @@ project: gasten_20231211
 name: fashion-3v0
 out-dir: out
 data-dir: data
-test-noise: data/z/z_20000_64
-fixed-noise: 20000
+test-noise: data/z/z_2048_64
+fixed-noise: 2048
 
 device: cuda:0
 num-workers: 2
@@ -37,7 +37,7 @@ optimizer:
 
 train:
   step-1:
-    epochs: 10
+    epochs: 15
     checkpoint-every: 5
     disc-iters: 1
     batch-size: 64
@@ -46,14 +46,14 @@ train:
     epochs: 30
     checkpoint-every: 5
     step-1-epochs:
-      - 0
       - 5
       - 10
+      - 15
     batch-size: 64
     disc-iters: 1
     classifier: 
-    - fashion-mnist.3v0/cnn-4-3.52011
-    - fashion-mnist.3v0/cnn-8-3.67780
-    - fashion-mnist.3v0/cnn-16-3.7723
+    - models/fashion-mnist.3v0/cnn-4-3.52011
+    - models/fashion-mnist.3v0/cnn-8-3.67780
+    - models/fashion-mnist.3v0/cnn-16-3.7723
     weight: 
     - 25
