--- a/experiments/clustering/fashion_3v0.yml
+++ b/experiments/clustering/fashion_3v0.yml
@@ -1,14 +1,14 @@
 project: gasten_20231211
 name: fashion-3v0
-data-dir: data
-clustering-dir: data/clustering
 device: cuda:0
 batch-size: 64
 checkpoint: True
+compute-fid: False
 
-fid:
-  compute: True
-  stats-path: data/fid-stats/stats.inception.fashion-mnist.3v0.npz
+dir:
+  data: data
+  clustering: data/clustering
+  fid-stats: data/fid-stats/stats.inception.fashion-mnist.3v0.npz
 
 dataset:
   name: fashion-mnist
@@ -17,12 +17,13 @@ dataset:
     neg: 0
 
 gasten:
-  classifier: todo
+  classifier: 
+  - models/fashion-mnist.3v0/cnn-8-3.67780
   epoch:
-    step-1: todo
-    step-2: todo
+    step-1: 5
+    step-2: 10
   weight: 25
-  run_id: todo
+  run-id: n3vrinsv
 
 clustering:
   z-dim: 64
