--- a/experiments/small/fashion_5v7.yml
+++ b/experiments/small/fashion_5v7.yml
@@ -51,6 +51,8 @@ train:
     batch-size: 64
     disc-iters: 1
     classifier: 
-    - TODO
+    - models/fashion-mnist.5v7/cnn-4-3.70186
+    - models/fashion-mnist.5v7/cnn-8-3.75424
+    - models/fashion-mnist.5v7/cnn-16-3.86682
     weight: 
     - 25
