--- a/experiments/clustering/fashion_5v7.yml
+++ b/experiments/clustering/fashion_5v7.yml
@@ -17,7 +17,10 @@ dataset:
     neg: 7
 
 gasten:
-  classifier: models/fashion-mnist.5v7/cnn-8-3.75424
+  classifier: 
+  - models/fashion-mnist.5v7/cnn-4-3.70186
+  - models/fashion-mnist.5v7/cnn-8-3.75424
+  - models/fashion-mnist.5v7/cnn-16-3.86682
   epoch:
     step-1: 5
     step-2: 10
