--- a/experiments/clustering/mnist_7v1.yml
+++ b/experiments/clustering/mnist_7v1.yml
@@ -17,7 +17,10 @@ dataset:
     neg: 1
 
 gasten:
-  classifier: models/mnist.7v1/cnn-2-1.37197
+  classifier: 
+  - models/mnist.7v1/cnn-1-1.61275
+  - models/mnist.7v1/cnn-2-1.37197
+  - models/mnist.7v1/cnn-4-1.3664
   epoch:
     step-1: 10
     step-2: 10
