--- a/experiments/clustering/mnist_9v4.yml
+++ b/experiments/clustering/mnist_9v4.yml
@@ -17,7 +17,10 @@ dataset:
     neg: 4
 
 gasten:
-  classifier: models/mnist.9v4/cnn-2-1.12432
+  classifier: 
+  - models/mnist.9v4/cnn-1-1.28371
+  - models/mnist.9v4/cnn-2-1.12432
+  - models/mnist.9v4/cnn-4-1.65646
   epoch:
     step-1: 10
     step-2: 10
