--- a/experiments/clustering/mnist_7v1.yml
+++ b/experiments/clustering/mnist_7v1.yml
@@ -22,14 +22,23 @@ gasten:
   - models/mnist.7v1/cnn-2-1.37197
   - models/mnist.7v1/cnn-4-1.3664
   epoch:
-    step-1: 10
+    step-1: 5
     step-2: 10
   weight: 25
-  run_id: maw2gmlz
+  run-id: maw2gmlz
 
 clustering:
   z-dim: 64
   fixed-noise: 20000
   acd: 0.1
-  dim-reduction: umap
-  clustering: gmm
+  n-iter: 20
+  options:
+  - dim-reduction: umap
+    clustering: gmm
+  - dim-reduction: umap
+    clustering: hdbscan
+
+prototypes:
+  type:
+  - random
+  - medoid
