--- a/experiments/clustering/mnist_7v1_tst.yml
+++ b/experiments/clustering/mnist_7v1_tst.yml
@@ -1,5 +1,5 @@
 project: gasten_20231211
-name: fashion-5v7
+name: mnist-7v1
 device: cuda:0
 batch-size: 64
 checkpoint: True
@@ -8,37 +8,32 @@ compute-fid: False
 dir:
   data: data
   clustering: data/clustering
-  fid-stats: data/fid-stats/stats.inception.fashion-mnist.5v7.npz
+  fid-stats: data/fid-stats/stats.inception.mnist.7v1.npz
 
 dataset:
-  name: fashion-mnist
+  name: mnist
   binary:
-    pos: 5
-    neg: 7
+    pos: 7
+    neg: 1
 
 gasten:
   classifier: 
-  - models/fashion-mnist.5v7/cnn-4-3.70186
-  - models/fashion-mnist.5v7/cnn-8-3.75424
-  - models/fashion-mnist.5v7/cnn-16-3.86682
+  - models/mnist.7v1/cnn-2-1.37197
   epoch:
     step-1: 5
     step-2: 10
   weight: 25
-  run-id: hyvj1lyo
+  run-id: maw2gmlz
 
 clustering:
   z-dim: 64
   fixed-noise: 20000
   acd: 0.1
-  n-iter: 20
+  n-iter: 1
   options:
-  - dim-reduction: umap
-    clustering: gmm
   - dim-reduction: umap
     clustering: hdbscan
 
 prototypes:
   type:
-  - random
   - medoid
