--- a/experiments/clustering/mnist_9v4.yml
+++ b/experiments/clustering/mnist_9v4.yml
@@ -22,14 +22,23 @@ gasten:
   - models/mnist.9v4/cnn-2-1.12432
   - models/mnist.9v4/cnn-4-1.65646
   epoch:
-    step-1: 10
+    step-1: 5
     step-2: 10
   weight: 25
-  run_id: c1fgt7lr
+  run-id: c1fgt7lr
 
 clustering:
   z-dim: 64
   fixed-noise: 20000
   acd: 0.1
-  dim-reduction: umap
-  clustering: gmm
+  n-iter: 20
+  options:
+  - dim-reduction: umap
+    clustering: gmm
+  - dim-reduction: umap
+    clustering: hdbscan
+
+prototypes:
+  type:
+  - random
+  - medoid
