updated experiments accordingly

--- a/experiments/clustering/mnist_7v1_tst.yml
+++ b/experiments/clustering/mnist_7v1_tst.yml
@@ -32,7 +32,7 @@ clustering:
   n-iter: 1
   options:
   - dim-reduction: umap
-    clustering: hdbscan
+    clustering: gmm
 
 prototypes:
   type:
