--- a/experiments/clustering/mnist_7v1_tst.yml
+++ b/experiments/clustering/mnist_7v1_tst.yml
@@ -1,8 +1,8 @@
 project: gasten_20231211
-name: mnist-7v1
+name: mnist-7v1-tst
 device: cuda:0
 batch-size: 64
-checkpoint: True
+checkpoint: False
 compute-fid: False
 
 dir:
@@ -27,7 +27,7 @@ gasten:
 
 clustering:
   z-dim: 64
-  fixed-noise: 20000
+  fixed-noise: 5000
   acd: 0.1
   n-iter: 1
   options:
