--- a/experiments/clustering/fashion_3v0.yml
+++ b/experiments/clustering/fashion_3v0.yml
@@ -4,7 +4,7 @@ tag: v3
 device: cuda:0
 batch-size: 64
 checkpoint: True
-compute-fid: False
+compute-fid: True
 
 dir:
   data: data
@@ -19,7 +19,7 @@ dataset:
 
 gasten:
   classifier: 
-  - models/fashion-mnist.3v0/cnn-4-3.52011
+  - models/fashion-mnist.3v0/cnn-16-3.7723
   epoch:
     step-1: 5
     step-2: 10
