generate prototypes just for best clustering. Added HDBSCAN. less generated images

--- a/experiments/clustering/mnist_7v1_tst.yml
+++ b/experiments/clustering/mnist_7v1_tst.yml
@@ -33,6 +33,8 @@ clustering:
   n-iter: 1
   options:
   - dim-reduction: umap
+    clustering: hdbscan
+  - dim-reduction: umap
     clustering: gmm
 
 prototypes:
