--- a/experiments/clustering/fashion_3v0.yml
+++ b/experiments/clustering/fashion_3v0.yml
@@ -1,6 +1,6 @@
 project: gasten_20231211
 name: fashion-3v0
-tag: v3
+tag: v4
 device: cuda:0
 batch-size: 64
 checkpoint: True
@@ -20,6 +20,8 @@ dataset:
 gasten:
   classifier: 
   - models/fashion-mnist.3v0/cnn-16-3.7723
+  - models/fashion-mnist.3v0/cnn-4-3.52011
+  - models/fashion-mnist.3v0/cnn-8-3.67780
   epoch:
     step-1: 5
     step-2: 10
@@ -28,13 +30,14 @@ gasten:
 
 clustering:
   z-dim: 64
-  fixed-noise: 20000
+  fixed-noise: 10000
   acd: 0.1
   n-iter: 20
   options:
   - dim-reduction: umap
-    clustering: gmm
-
+    clustering: hdbscan
+  - dim-reduction: umap
+    clustering: hdbscan
 prototypes:
   type:
   - medoid
