--- a/experiments/clustering/mnist_8v0.yml
+++ b/experiments/clustering/mnist_8v0.yml
@@ -1,6 +1,6 @@
 project: gasten_20231211
 name: mnist-8v0
-tag: v3
+tag: v4
 device: cuda:0
 batch-size: 64
 checkpoint: True
@@ -30,12 +30,14 @@ gasten:
 
 clustering:
   z-dim: 64
-  fixed-noise: 20000
+  fixed-noise: 10000
   acd: 0.1
   n-iter: 20
   options:
   - dim-reduction: umap
-    clustering: gmm
+    clustering: hdbscan
+  - dim-reduction: umap
+    clustering: hdbscan
 
 prototypes:
   type:
