--- a/environment.yml
+++ b/environment.yml
@@ -1,275 +1,192 @@
-name: gasten
+name: cuda12
 channels:
-  - nvidia
   - pytorch
-  - anaconda
+  - nvidia
   - conda-forge
+  - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
-  - alsa-lib=1.2.8=h166bdaf_0
-  - attr=2.5.1=h166bdaf_1
+  - appdirs=1.4.4=pyh9f0ad1d_0
   - blas=1.0=mkl
-  - brotli=1.0.9=h166bdaf_8
-  - brotli-bin=1.0.9=h166bdaf_8
-  - brotlipy=0.7.0=py310h5764c6d_1005
-  - build=0.7.0=pyhd8ed1ab_0
-  - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2023.08.22=h06a4308_0
-  - cairo=1.16.0=ha61ee94_1014
-  - captum=0.6.0=0
-  - cffi=1.15.1=py310h255011f_3
-  - click=8.1.3=unix_pyhd8ed1ab_2
+  - brotli=1.1.0=hd590300_1
+  - brotli-bin=1.1.0=hd590300_1
+  - brotli-python=1.1.0=py312h30efb56_1
+  - bzip2=1.0.8=hd590300_5
+  - ca-certificates=2024.2.2=hbcca054_0
+  - captum=0.6.0=pyhd8ed1ab_0
+  - certifi=2024.2.2=pyhd8ed1ab_0
+  - charset-normalizer=3.3.2=pyhd8ed1ab_0
+  - click=8.1.7=unix_pyh707e725_0
   - colorama=0.4.6=pyhd8ed1ab_0
-  - contourpy=1.0.7=py310hdf3cbec_0
-  - cryptography=40.0.1=py310h34c0648_0
-  - cuda-cudart=11.8.89=0
-  - cuda-cupti=11.8.87=0
-  - cuda-libraries=11.8.0=0
-  - cuda-nvrtc=11.8.89=0
-  - cuda-nvtx=11.8.86=0
-  - cuda-runtime=11.8.0=0
-  - cudatoolkit=11.8.0=h37601d7_11
-  - cudnn=8.4.1.50=hed8a83a_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - dbus=1.13.6=h5008d03_3
+  - contextlib2=21.6.0=pyhd8ed1ab_0
+  - contourpy=1.2.0=py312h8572e83_0
+  - cuda-cudart=12.1.105=0
+  - cuda-cupti=12.1.105=0
+  - cuda-libraries=12.1.0=0
+  - cuda-nvrtc=12.1.105=0
+  - cuda-nvtx=12.1.105=0
+  - cuda-opencl=12.4.99=0
+  - cuda-runtime=12.1.0=0
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - dbus=1.13.18=hb2f20db_0
   - docker-pycreds=0.4.0=py_0
-  - expat=2.5.0=hcb278e6_1
+  - expat=2.6.2=h59595ed_0
   - ffmpeg=4.3=hf484d3e_0
-  - fftw=3.3.10=nompi_hc118613_108
-  - filelock=3.12.2=pyhd8ed1ab_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
+  - filelock=3.13.1=pyhd8ed1ab_0
   - fontconfig=2.14.2=h14ed4e7_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - freetype=2.12.1=hca18f0e_1
-  - gettext=0.21.1=h27087fc_0
-  - gitdb=4.0.9=pyhd8ed1ab_0
-  - glib=2.76.3=hfc55251_0
-  - glib-tools=2.76.3=hfc55251_0
-  - gmp=6.2.1=h58526e2_0
-  - gmpy2=2.1.2=py310h3ec546c_1
+  - fonttools=4.49.0=py312h98912ed_0
+  - freetype=2.12.1=h267a509_2
+  - gitdb=4.0.11=pyhd8ed1ab_0
+  - gitpython=3.1.42=pyhd8ed1ab_0
+  - glib=2.80.0=hf2295e7_0
+  - glib-tools=2.80.0=hde27a5a_0
+  - gmp=6.3.0=h59595ed_1
   - gnutls=3.6.13=h85f3911_1
-  - graphite2=1.3.13=h58526e2_1001
-  - gst-plugins-base=1.22.0=h4243ec0_2
-  - gstreamer=1.22.0=h25f0c4b_2
-  - gstreamer-orc=0.4.34=hd590300_0
-  - harfbuzz=6.0.0=h8e241bc_0
-  - icu=70.1=h27087fc_0
-  - importlib-metadata=6.3.0=pyha770c72_0
-  - jack=1.9.22=h11f4161_0
-  - jinja2=3.1.2=pyhd8ed1ab_1
+  - gst-plugins-base=1.14.1=h6a678d5_1
+  - gstreamer=1.14.1=h5eee18b_1
+  - icu=73.2=h59595ed_0
+  - idna=3.6=pyhd8ed1ab_0
+  - jinja2=3.1.3=pyhd8ed1ab_0
+  - joblib=1.3.2=pyhd8ed1ab_0
   - jpeg=9e=h166bdaf_2
   - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.5=py312h8572e83_1
   - krb5=1.20.1=h81ceb04_0
   - lame=3.100=h166bdaf_1003
   - lcms2=2.15=hfd0df8a_0
   - ld_impl_linux-64=2.40=h41732ed_0
   - lerc=4.0.0=h27087fc_0
-  - libblas=3.9.0=16_linux64_mkl
-  - libbrotlicommon=1.0.9=h166bdaf_8
-  - libbrotlidec=1.0.9=h166bdaf_8
-  - libbrotlienc=1.0.9=h166bdaf_8
-  - libcap=2.67=he9d0100_0
-  - libcblas=3.9.0=16_linux64_mkl
-  - libclang=15.0.7=default_h7634d5b_2
-  - libclang13=15.0.7=default_h9986a30_2
-  - libcublas=11.11.3.6=0
-  - libcufft=10.9.0.58=0
-  - libcufile=1.7.0.149=0
+  - libabseil=20240116.1=cxx17_h59595ed_2
+  - libblas=3.9.0=1_h86c2bf4_netlib
+  - libbrotlicommon=1.1.0=hd590300_1
+  - libbrotlidec=1.1.0=hd590300_1
+  - libbrotlienc=1.1.0=hd590300_1
+  - libcblas=3.9.0=5_h92ddd45_netlib
+  - libclang=14.0.6=default_h7634d5b_1
+  - libclang13=14.0.6=default_h9986a30_1
+  - libcublas=12.1.0.26=0
+  - libcufft=11.0.2.4=0
+  - libcufile=1.9.0.20=0
   - libcups=2.3.3=h36d4200_3
-  - libcurand=10.3.3.53=0
-  - libcusolver=11.4.1.48=0
-  - libcusparse=11.7.5.86=0
-  - libdb=6.2.32=h9c3ff4c_0
+  - libcurand=10.3.5.119=0
+  - libcusolver=11.4.4.55=0
+  - libcusparse=12.0.2.55=0
   - libdeflate=1.17=h0b41bf4_0
   - libedit=3.1.20191231=he28a2e2_2
-  - libevent=2.1.10=h28343ad_4
-  - libexpat=2.5.0=hcb278e6_1
+  - libexpat=2.6.2=h59595ed_0
   - libffi=3.4.2=h7f98852_5
-  - libflac=1.4.3=h59595ed_0
-  - libgcc-ng=12.2.0=h65d4601_19
-  - libgcrypt=1.10.1=h166bdaf_0
-  - libgfortran-ng=12.2.0=h69a702a_19
-  - libgfortran5=12.2.0=h337968e_19
-  - libglib=2.76.3=hebfc3b9_0
-  - libgomp=12.2.0=h65d4601_19
-  - libgpg-error=1.47=h71f35ed_0
-  - libhwloc=2.9.1=hd6dc26d_0
-  - libiconv=1.17=h166bdaf_0
+  - libgcc-ng=13.2.0=h807b86a_5
+  - libgfortran-ng=13.2.0=h69a702a_5
+  - libgfortran5=13.2.0=ha4646dd_5
+  - libglib=2.80.0=hf2295e7_0
+  - libhwloc=2.9.3=default_h554bfaf_1009
+  - libiconv=1.17=hd590300_2
   - libjpeg-turbo=2.0.0=h9bf148f_0
-  - liblapack=3.9.0=16_linux64_mkl
+  - liblapack=3.9.0=5_h92ddd45_netlib
   - libllvm14=14.0.6=hcd5def8_4
-  - libllvm15=15.0.7=hadd5161_1
-  - libmagma=2.7.1=hc72dce7_1
-  - libmagma_sparse=2.7.1=hc72dce7_2
-  - libnpp=11.8.0.86=0
-  - libnsl=2.0.0=h7f98852_0
-  - libnvjpeg=11.9.0.86=0
-  - libogg=1.3.4=h7f98852_1
-  - libopenblas=0.3.21=pthreads_h78a6416_3
-  - libopus=1.3.1=h7f98852_1
-  - libpng=1.6.39=h753d276_0
-  - libpq=15.3=hbcd7760_1
-  - libprotobuf=3.21.9=h6239696_0
-  - libsndfile=1.2.0=hb75c966_0
-  - libsqlite=3.40.0=h753d276_0
-  - libstdcxx-ng=12.2.0=h46fd767_19
-  - libsystemd0=253=h8c4010b_1
+  - libnpp=12.0.2.50=0
+  - libnsl=2.0.1=hd590300_0
+  - libnvjitlink=12.1.105=0
+  - libnvjpeg=12.1.1.14=0
+  - libpng=1.6.43=h2797004_0
+  - libpq=12.17=hdbd6064_0
+  - libprotobuf=4.25.3=h08a7969_0
+  - libsqlite=3.45.2=h2797004_0
+  - libstdcxx-ng=13.2.0=h7e041cc_5
   - libtiff=4.5.0=h6adf6a1_2
-  - libtool=2.4.7=h27087fc_0
-  - libudev1=253=h0b41bf4_1
   - libuuid=2.38.1=h0b41bf4_0
-  - libvorbis=1.3.7=h9c3ff4c_0
-  - libwebp-base=1.3.0=h0b41bf4_0
-  - libxcb=1.13=h7f98852_1004
-  - libxkbcommon=1.5.0=h79f4944_1
-  - libxml2=2.10.3=hca2bb57_4
-  - libzlib=1.2.13=h166bdaf_4
-  - llvm-openmp=16.0.1=h417c0b6_0
-  - llvmlite=0.40.1=py310h1b8f574_0
-  - lz4-c=1.9.4=hcb278e6_0
-  - magma=2.7.1=ha770c72_2
-  - markupsafe=2.1.3=py310h2372a71_0
-  - matplotlib=3.7.1=py310hff52083_0
-  - matplotlib-base=3.7.1=py310he60537e_0
-  - mkl=2022.2.1=h84fe81f_16997
-  - mpc=1.3.1=hfe3b2da_0
-  - mpfr=4.2.0=hb012696_0
-  - mpg123=1.31.3=hcb278e6_0
+  - libwebp-base=1.3.2=hd590300_0
+  - libxcb=1.15=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.6.0=hd429924_1
+  - libxml2=2.12.5=h232c23b_0
+  - libzlib=1.2.13=hd590300_5
+  - llvm-openmp=15.0.7=h0cdce71_0
+  - llvmlite=0.42.0=py312hb06c811_1
+  - markupsafe=2.1.5=py312h98912ed_0
+  - matplotlib=3.8.3=py312h7900ff3_0
+  - matplotlib-base=3.8.3=py312he5832f3_0
+  - mkl=2023.0.0=h84fe81f_26648
   - mpmath=1.3.0=pyhd8ed1ab_0
   - munkres=1.1.4=pyh9f0ad1d_0
-  - mysql-common=8.0.33=hf1915f5_1
-  - mysql-libs=8.0.33=hca2cd23_1
-  - nccl=2.15.5.1=h0800d71_0
-  - ncurses=6.3=h27087fc_1
+  - mysql=5.7.20=hf484d3e_1001
+  - ncurses=6.4=h59595ed_2
   - nettle=3.6=he412f7d_0
-  - networkx=3.1=pyhd8ed1ab_0
-  - nspr=4.35=h27087fc_0
-  - nss=3.89=he45b914_0
-  - numba=0.57.1=py310h0f6aa51_0
+  - networkx=3.2.1=pyhd8ed1ab_0
+  - numba=0.59.0=py312hacefee8_1
+  - numpy=1.26.4=py312heda63a1_0
   - openh264=2.1.1=h780b84a_0
   - openjpeg=2.5.0=hfec8fc6_2
-  - openssl=3.1.4=hd590300_0
-  - pandas=2.0.0=py310h9b08913_0
-  - patsy=0.5.3=pyhd8ed1ab_0
-  - pcre2=10.40=hc3806b6_0
-  - pep517=0.13.0=pyhd8ed1ab_0
-  - pip=23.0.1=pyhd8ed1ab_0
-  - pip-tools=6.13.0=pyhd8ed1ab_0
-  - pixman=0.40.0=h36c2ea0_0
-  - platformdirs=3.2.0=pyhd8ed1ab_0
-  - plotly=5.14.1=pyhd8ed1ab_0
+  - openssl=3.2.1=hd590300_0
+  - packaging=24.0=pyhd8ed1ab_0
+  - pandas=2.2.1=py312hfb8ada1_0
+  - pathtools=0.1.2=py_1
+  - patsy=0.5.6=pyhd8ed1ab_0
+  - pcre2=10.43=hcad00b1_0
+  - pillow=10.2.0=py312h5eee18b_0
+  - pip=24.0=pyhd8ed1ab_0
   - ply=3.11=py_1
-  - pooch=1.7.0=pyha770c72_3
-  - promise=2.3=py310hff52083_7
+  - protobuf=4.25.3=py312h72fbbdf_0
+  - psutil=5.9.8=py312h98912ed_0
   - pthread-stubs=0.4=h36c2ea0_1001
-  - pulseaudio=16.1=hcb278e6_3
-  - pulseaudio-client=16.1=h5195f5e_3
-  - pulseaudio-daemon=16.1=ha8d29e2_3
-  - pyaml=21.10.1=pyhd8ed1ab_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pynndescent=0.5.10=pyh1a96a4e_0
-  - pyopenssl=23.1.1=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyqt=5.15.7=py310hab646b1_3
-  - pyqt5-sip=12.11.0=py310heca2aa9_3
+  - pyaml=23.12.0=pyhd8ed1ab_0
+  - pynndescent=0.5.11=pyhca7485f_0
+  - pyparsing=3.1.2=pyhd8ed1ab_0
+  - pyqt=5.15.10=py312h6a678d5_0
+  - pyqt5-sip=12.13.0=py312h5eee18b_0
   - pysocks=1.7.1=pyha2e5f31_6
-  - python=3.10.10=he550d4f_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-tzdata=2023.3=pyhd8ed1ab_0
-  - python_abi=3.10=3_cp310
-  - pytorch=2.0.1=py3.10_cuda11.8_cudnn8.7.0_0
-  - pytorch-cuda=11.8=h7e8668a_5
+  - python=3.12.2=hab00c5b_0_cpython
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-dotenv=1.0.1=pyhd8ed1ab_0
+  - python-tzdata=2024.1=pyhd8ed1ab_0
+  - python_abi=3.12=4_cp312
+  - pytorch=2.2.1=py3.12_cuda12.1_cudnn8.9.2_0
+  - pytorch-cuda=12.1=ha16c6d3_5
   - pytorch-mutex=1.0=cuda
-  - pytz=2023.3=pyhd8ed1ab_0
-  - pyyaml=6.0=py310h5764c6d_5
-  - qt-main=5.15.8=h5d23da1_6
+  - pytz=2024.1=pyhd8ed1ab_0
+  - pyyaml=6.0.1=py312h98912ed_1
+  - qt-main=5.15.2=h53bd1ea_10
   - readline=8.2=h8228510_1
-  - scikit-optimize=0.9.0=pyhd8ed1ab_1
-  - seaborn=0.12.2=hd8ed1ab_0
-  - setuptools=67.6.1=pyhd8ed1ab_0
-  - sip=6.7.9=py310hc6cd4ac_0
+  - requests=2.31.0=pyhd8ed1ab_0
+  - schema=0.7.5=pyhd8ed1ab_1
+  - scikit-learn=1.4.1.post1=py312h394d371_0
+  - scikit-optimize=0.10.0=pyhd8ed1ab_0
+  - scipy=1.12.0=py312heda63a1_2
+  - seaborn=0.13.2=hd8ed1ab_0
+  - seaborn-base=0.13.2=pyhd8ed1ab_0
+  - sentry-sdk=1.42.0=pyhd8ed1ab_0
+  - setproctitle=1.3.3=py312h98912ed_0
+  - setuptools=69.2.0=pyhd8ed1ab_0
+  - sip=6.7.12=py312h30efb56_0
   - six=1.16.0=pyh6c4a22f_0
-  - sleef=3.5.1=h9b69904_2
-  - smmap=3.0.5=pyh44b312d_0
-  - statsmodels=0.13.5=py310hde88566_2
-  - sympy=1.12=pypyh9d50eac_103
-  - tenacity=8.2.2=pyhd8ed1ab_0
-  - tk=8.6.12=h27826a3_0
-  - toml=0.10.2=pyhd8ed1ab_0
+  - smmap=5.0.0=pyhd8ed1ab_0
+  - sqlite=3.45.2=h2c6b66d_0
+  - statsmodels=0.14.1=py312hc7c0aa3_0
+  - sympy=1.12=pyh04b8f61_3
+  - tbb=2021.11.0=h00ab1b0_1
+  - threadpoolctl=3.3.0=pyhc1e730c_0
+  - tk=8.6.13=noxft_h4845f30_101
   - tomli=2.0.1=pyhd8ed1ab_0
-  - torchtriton=2.0.0=py310
-  - tornado=6.3.2=py310h2372a71_0
-  - typing_extensions=4.5.0=pyha770c72_0
-  - tzdata=2023c=h71feb2d_0
-  - umap-learn=0.5.4=py310hff52083_0
-  - unicodedata2=15.0.0=py310h5764c6d_0
-  - wheel=0.40.0=pyhd8ed1ab_0
-  - xcb-util=0.4.0=h516909a_0
-  - xcb-util-image=0.4.0=h166bdaf_0
-  - xcb-util-keysyms=0.4.0=h516909a_0
-  - xcb-util-renderutil=0.3.9=h166bdaf_0
-  - xcb-util-wm=0.4.1=h516909a_0
-  - xkeyboard-config=2.38=h0b41bf4_0
+  - torchaudio=2.2.1=py312_cu121
+  - torchvision=0.17.1=py312_cu121
+  - tornado=6.4=py312h98912ed_0
+  - tqdm=4.66.2=pyhd8ed1ab_0
+  - typing_extensions=4.10.0=pyha770c72_0
+  - tzdata=2024a=h0c530f3_0
+  - umap-learn=0.5.5=py312h7900ff3_1
+  - urllib3=2.2.1=pyhd8ed1ab_0
+  - wandb=0.16.3=pyhd8ed1ab_0
+  - wheel=0.42.0=pyhd8ed1ab_0
+  - xkeyboard-config=2.41=hd590300_0
   - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.1.1=hd590300_0
-  - xorg-libsm=1.2.4=h7391055_0
-  - xorg-libx11=1.8.4=h0b41bf4_0
-  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libx11=1.8.7=h8ee46fc_0
+  - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h0b41bf4_2
-  - xorg-libxrender=0.9.10=h7f98852_1003
-  - xorg-renderproto=0.11.1=h7f98852_1002
   - xorg-xextproto=7.3.0=h0b41bf4_1003
   - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.6=h166bdaf_0
   - yaml=0.2.5=h7f98852_2
-  - zipp=3.15.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h166bdaf_4
-  - zstd=1.5.2=h3eb15da_6
-  - pip:
-      - autopep8==1.6.0
-      - certifi==2022.5.18.1
-      - charset-normalizer==2.0.12
-      - contextlib2==21.6.0
-      - fonttools==4.33.3
-      - gitpython==3.1.27
-      - idna==3.3
-      - imageio==2.31.6
-      - joblib==1.1.0
-      - kiwisolver==1.4.2
-      - numpy==1.24.0
-      - packaging==21.3
-      - pathtools==0.1.2
-      - pillow==9.1.1
-      - protobuf==3.20.1
-      - psutil==5.9.1
-      - pyclustering==0.10.1.2
-      - pycodestyle==2.8.0
-      - python-dotenv==0.20.0
-      - pytorch-fid==0.3.0
-      - pytorch-metric-learning==1.3.0
-      - requests==2.27.1
-      - schema==0.7.5
-      - scikit-learn==1.3.2
-      - scipy==1.11.4
-      - sentry-sdk==1.5.12
-      - setproctitle==1.2.3
-      - shortuuid==1.0.9
-      - stack-data==0.6.3
-      - tbb==2021.10.0
-      - threadpoolctl==3.1.0
-      - tifffile==2023.9.26
-      - torch==1.11.0
-      - torchaudio==0.11.0
-      - torchvision==0.12.0
-      - tqdm==4.64.0
-      - typing-extensions==4.2.0
-      - urllib3==1.26.9
-      - wandb==0.12.16
-      - zstandard==0.22.0
-prefix: /home/igomes/mambaforge/envs/gasten
+  - zlib=1.2.13=hd590300_5
+  - zstd=1.5.5=hfc55251_0
+prefix: /opt/conda/envs/cuda12
